fix image alignment issue

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,6 @@
 /*- Custom style -*/
 
 // -- Put custom style under this point -- //
+.image-left {
+	margin: 20px 0;
+}
